# vector-search-engine

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
crawler/crawler/: items.py  settings.py
style/: input.css
templates/: index.html
