[project]
name = "vector-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "pymilvus>=2.6.1",
    "scrapy>=2.13.3",
    "scrapy-playwright>=0.0.44",
]
